refactor: replace collect(Collectors.toList()) by toList() at streams
Available since Java 16